7th lesson - homework - little correction of services, controllers and tets